--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>This is my example website</h1>
     <p>this should be in second branch</p>
-    
+    <div class="name">this vs code is osthir</div>
 </body>
 </html>
